# cnc-driver

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
avr-specs/: avr-atmega2560.json
driver/: Cargo.toml  build_upload.sh  rustc-ice-2024-12-11T23_45_44-1576596.txt  rustc-ice-2024-12-11T23_45_45-1576607.txt  rustc-ice-2024-12-11T23_45_45-1576618.txt  rustc-ice-2024-12-11T23_45_56-1576663.txt  rustc-ice-2024-12-11T23_46_00-1576680.txt  rustc-ice-2024-12-11T23_46_05-1576726.txt  rustc-ice-2024-12-11T23_46_05-1576737.txt  rustc-ice-2024-12-11T23_46_55-1577001.txt
driver/.cargo/: config.toml
driver/src/: gcode_parser.rs  machine.rs  main.rs  my_clock.rs  pins.rs  stepper.rs  stepper_interrupt.rs
src/: main.rs  my_clock.rs  stepper.rs
